# flux

./: .gitignore  Dockerfile  README.md  devcontainer.json  settings.json
.devcontainer/: Dockerfile  devcontainer.json
flux-api/: Cargo.toml  database.sqlite
flux-api/migrations/: 20230826130038_users.sql
flux-api/src/: error.rs  jwt_claims.rs  main.rs  server_config.rs
flux-api/src/api/: mod.rs  routes_health.rs  routes_login.rs  routes_user.rs
flux-api/src/api/helpers/: mod.rs  password.rs
flux-api/src/controllers/: sqlite.rs
flux-api/src/models/: user.rs
flux-api/src/mw/: mod.rs  mw_auth.rs
flux-frontend/: .gitignore  package.json  pnpm-lock.yaml
