[package]
name = "flux-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.1"
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
jsonwebtoken = "9.1.0"
tower-cookies = "0.10.0"
async-trait = "0.1.74"
rust-argon2 = "2.0.0"
rand = "0.8.5"
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio", "sqlite"] }
dotenv = "0.15.0"
axum-macros = "0.4.0"
hyper = "1.0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tower-sessions = "0.7.0"
tower-timeout = "0.3.0"
